--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>The head element contains information about the webpage</li>
+        <li>The body element represents the visible content shown to the user</li>
+        <li> The head element contains the metadata tags </li>
+      </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS stands for Cascading Style Sheets</li>
+          <li>Enter your other student notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>If you are a windows user Bash and Git Bash are the same thing</li>
+          <li>On a windows computer access the command line by pressing the start menu and typing Git Bash</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+          <li>More JavaScript notes</li>
+        </ul>
+      </section>
+
+      
     </main>
 
     <footer>
